--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "rust-analyzer.cargo.allTargets": false,
     "rust-analyzer.cargo.target": "aarch64-unknown-none-softfloat",
+    "editor.formatOnSave":true
 }
