--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,14 +5,16 @@ version = "0.1.0"
 
 [dependencies]
 mbarrier = "0.1"
-dma-api = { version = "0.3", features = ["alloc"] }
+dma-api = { version = "0.4.3", features = ["alloc"] }
 log = "0.4"
-crab-usb = "0.2.1"
-futures = {version = "0.3", features = ["alloc"], default-features = false}
-usb-if = "0.2.1"
+futures = { version = "0.3", features = ["alloc"], default-features = false }
+crab-usb = "0.3.3"
+usb-if = "0.3.1"
 
 [dev-dependencies]
-bare-test = "0.4"
+bare-test = "0.5"
+spin_on = "0.1.1"
+pcie = "0.3"
 
 [build-dependencies]
 bare-test-macros = "0.2"
