--- a/bare-test.toml
+++ b/bare-test.toml
@@ -2,4 +2,5 @@
 machine = "virt"
 cpu = "cortex-a53"
 graphic = false
+# args = "-usb -d trace:*usb*,trace:*xhci* -device qemu-xhci,id=xhci -device usb-host,bus=xhci.0,hostbus=0,hostaddr=4"
 args = "-usb -d trace:*usb*,trace:*xhci* -device qemu-xhci,id=xhci -device usb-host,bus=xhci.0,hostbus=0,hostaddr=4"
